@@ -335,7 +335,11 @@ delete.label=Delete Next Character
 delete-word.label=Delete Next Word
 overwrite.label=Overwrite Mode On/Off
 home.label=Beginning of Line
+document-home.label=Beginning of Document
+select-doc-home.label=Select Beginning of Document
 end.label=End of Line
+document-end.label=End of Document
+select-doc-end.label=Select End of Document
 select-home.label=Select Beginning of Line
 select-end.label=Select End of Line
 prev-page.label=Previous Page
