@@ -15,8 +15,12 @@ overwrite.shortcut=INSERT
 toggle-rect.shortcut=C+\\
 home.shortcut=HOME
 end.shortcut=END
+document-home.shortcut=C+HOME
+document-end.shortcut=C+END
 select-home.shortcut=S+HOME
 select-end.shortcut=S+END
+select-doc-home.shortcut=CS+HOME
+select-doc-end.shortcut=CS+END
 prev-page.shortcut=PAGE_UP
 next-page.shortcut=PAGE_DOWN
 select-prev-page.shortcut=S+PAGE_UP
